# gridlock-mpc-engine

./: .dockerignore  .env.tmpl  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build_new_guardian.sh  dev-key-info.Dockerfile  dev-message-logging.Dockerfile  dev-node.Dockerfile  dev-test-node.Dockerfile  docker-compose.override.yml  docker-compose.partner.yml  docker-compose.prod.yml  docker-compose.test.compatibility-1.yml  docker-compose.test.compatibility-2.yml  docker-compose.test.yml  docker-compose.webhook.yml  docker-compose.yml
.cargo/: config.toml
.github/scripts/: compatibility-test.sh  deploy.sh  integration-test.sh  node-version-env.sh
.github/workflows/: README_CD.md  README_CI.md  cd.yml  ci-backend.yml  ci-docker.yml  mobile-build.yml
backend/: .gitignore  README.md
backend/key-info/: Cargo.toml
backend/key-info/src/: main.rs  storage.rs
backend/message-logging/: Cargo.toml
backend/message-logging/src/: main.rs
backend/node/: Cargo.toml
backend/node/src/: auth.rs  authorization.rs  command.rs  credentials.rs  eject.rs  encryption.rs  ghost_shares.rs  key_info.rs  lib.rs  logging.rs  main.rs  node.rs  security.rs
backend/node/src/communication/: ecdsa.rs  mod.rs  nats.rs  nats_session.rs  protocol.rs  round_subscriptions.rs
backend/node/src/config/: gridlock.rs  mobile.rs  mod.rs
backend/node/src/keygen/: key_import.rs  mod.rs  sr25519.rs
backend/node/src/keygen/ecdsa/: client.rs  mod.rs  orchestrate.rs  session.rs
backend/node/src/keygen/eddsa/: client.rs  mod.rs  orchestrate.rs  session.rs
backend/node/src/recovery/: calculator.rs  commands.rs  encryption.rs  helper_role.rs  mod.rs  orchestrate.rs  recovery_session.rs  target_role.rs
backend/node/src/signing/: mod.rs  sr25519.rs  sr25519_musign.rs
backend/node/src/signing/ecdsa/: mod.rs  orchestrate.rs  session.rs
backend/node/src/signing/eddsa/: client.rs  mod.rs  orchestrate.rs  session.rs
backend/node/src/storage/: fs.rs  key_info_store.rs  key_metadata_store.rs  key_store.rs  keyshare_access.rs  keyshare_index_info.rs  mod.rs  wrappers.rs
backend/node/src/user_recovery/: confirm.rs  mod.rs  session.rs
backend/server-node/: Cargo.toml
backend/server-node/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: ecdsa.rs  key_info.rs  lib.rs  recovery.rs
backend/test/: Cargo.toml  README.md
backend/test/creds/: TEST-USER-PUB.creds  TEST-USER.creds
backend/test/data/: local-keys.json  staging-keys.json
backend/test/data/nats/: nats.cfg
backend/test/src/: lib.rs  listener.rs  orchestrate_test.rs  publisher.rs  test.rs
backend/test/src/common/: config.rs  helpers.rs  mod.rs  network.rs  protocol_runner.rs
backend/user-node/: Cargo.toml  build.rs
backend/user-node/android/: .gitignore  README.md  build-libgmp.sh  build-libnode.sh  build-libsqlite3.sh  download-libgmp.sh  download-libsqlite3.sh  toolchain-aarch64.sh  toolchain-armv7.sh  toolchain-x86_64.sh  zip-library.sh
backend/user-node/ios/: README.md  build-libgmp.sh  build-libguardian.sh  build-libsqlite3.sh  utils.sh  zip-library.sh
backend/user-node/src/: build_info.rs  lib.rs
backend/user-node/src/os/: android.rs  ios.rs
docs/: debugging-and-logging.md  nats.md  servers.md
webhook/: Dockerfile  README.md  hooks.json  redeploy.sh
