[package]
name = "key-info"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "key-info"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.24.1"
tokio = { version = "1.34.0" , features = ["rt-multi-thread", "macros", "signal"]}
tokio-stream = "0.1.14"
futures = "0.3.29"
anyhow = "1.0.75"
signal-hook = "0.2.3"
log4rs = "1.0.0"
log = "0.4.14"
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
chrono = { version = "0.4.31", features = ["serde"]}
serde = { version = "1.0.193", features = ["derive"] }
derive_more = "0.99.17"
shared = { path = "../shared"}
serde_json = "1.0.69"
strum_macros = "0.25.3"
uuid = { version = "0.8.0", features = ["v4", "serde"] }
