[package]
authors = ["Gridlock Devs <devs@gridlock.network"]
build = "build.rs"
edition = "2021"
name = "node"
version = "1.0.2"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.9.4" 
anyhow = "^1.0.34" 
base32 = "0.4" 
base64 = "0.13.0" 
bulletproof-kzen = "=1.2.0" # NOTE: version higher than 1.2.0 has dependencies conflict
cfg-if = "1.0.0" 
chrono = {version = "0.4", features = ["serde"]} 
curv = {package = "curv-kzen", version = "0.9.0", default-features = false, features = ["rust-gmp-kzen"]} 
curve25519-dalek = "3.1.0" 
derive_more = "0.99.17" 
ed25519-dalek = "1.0.1" 
glob = "0.3.0" 
hex = "0.4.3" 
hmac = "0.11.0"
itertools = "0.10.3" 
lazy_static = "1.4.0" 
libsecp256k1 = "0.7.0" 
log = "0.4" 
multi-party-ecdsa = {git = "https://github.com/ZenGo-X/multi-party-ecdsa", default-features = false, version = "0.8.1"} 
multi-party-eddsa = {git = "https://github.com/ZenGo-X/multi-party-eddsa", version = "0.3.0"} 
nats = "0.24.0" 
nkeys = "0.1.0" 
paillier = {package = "kzen-paillier", version = "=0.4.2"} 
rand = "0.8.4" 
regex = "1.5.5" 
rust-argon2 = "0.8.2" 
schnorrkel = "0.9" 
secp256k1 = "0.20.3" 
serde = {version = "1.0.116", features = ["derive"]} 
serde_json = "=1.0.69" 
sha2 = "0.9" 
shared = {path = "../shared"} 
sodiumoxide = "0.2" 
strum = "0.22.0" 
strum_macros = "0.23.1" 
tracing = "0.1.37" 
tracing-appender = "0.2.2" 
tracing-log = {version = "0.1.3", features = ["env_logger"]} 
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]} 
uuid = {version = "0.8.0", features = ["v4", "serde"]} 
zk-paillier = {version = "0.4.3"}
