[package]
name = "server-node"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "guardian-node"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.34"
cfg-if = "1.0.0"
nats = "0.24.0"
uuid = { version = "0.8.0", features = ["v4", "serde"] }
node = { path = "../node" }
signal-hook = "0.2.3"
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
