[package]
name = "test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "listener"
path = "src/listener.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[lib]
name = "test"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
ed25519-dalek = "1"
hex = "0.4.3"
libsecp256k1 = "0.7.0"
log = "0.4.14"
nats = "0.24.0"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.68"
sha3 = "0.10.1"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = ["full"] }
uuid = { version = "0.8.0", features = ["v4", "serde"] }
stringify-attr = "1.0.0"
base64 = "0.13.0"
schnorrkel = "0.9"
derive_more = "0.99.17"
ctor = "0.2.2"
