[package]
name = "user-node"
version = "0.3.1"
edition = "2021"
build = "build.rs"

[lib]
name = "node"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.34"
nats = "0.24.0"
uuid = { version = "0.8.0", features = ["v4", "serde"] }
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
libc = "0.2.84"
ndk-sys = "0.2.1"

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2.84"
